--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/godot-cpp"]
 	path = lib/godot-cpp
 	url = https://github.com/godotengine/godot-cpp.git
+[submodule "lib/gdextension-lite"]
+	path = lib/gdextension-lite
+	url = https://github.com/gilzoide/gdextension-lite.git
