--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: true
-      - name: Install dependencies
-        run: |
-          brew install scons
+      - name: Setup godot-cpp
+        uses: ./lib/godot-cpp/.github/actions/setup-godot-cpp
+        with:
+          platform: ${{ matrix.platform }}
       - name: Cache SCons files and compiled files
         uses: actions/cache@v4
         with:
@@ -71,11 +72,15 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: true
-      - name: Install dependencies
+      - name: Setup godot-cpp
+        uses: ./lib/godot-cpp/.github/actions/setup-godot-cpp
+        with:
+          platform: ${{ matrix.platform }}
+      - name: Setup dependencies
+        if: ${{ join(matrix.packages, ' ') != '' }}
         run: |
           sudo apt-get update
-          sudo apt-get install scons ${{ join(matrix.packages, ' ') }}
-          pip install typing-extensions
+          sudo apt-get install ${{ join(matrix.packages, ' ') }}
       - name: Generate bindings
         run: |
           make -C lib/gdextension-lite generate-bindings
