--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,11 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 4
 
-[Sconstruct]
+[*.py]
+indent_style = space
+indent_size = 4
+
+[SConstruct]
 indent_style = space
 indent_size = 4
 
