--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,13 +53,11 @@ jobs:
       fail-fast: false
       matrix:
         arch: [x86_64, x86_32]
-        platform: [linux, windows, android]
+        platform: [linux, android]
         include:
           - platform: linux
             arch: x86_32
             packages: [g++-multilib]
-          - platform: windows
-            packages: [g++-mingw-w64]
           - platform: android
             arch: arm64
           - platform: android
@@ -81,6 +79,36 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install ${{ join(matrix.packages, ' ') }}
+      - name: Generate bindings
+        run: |
+          make -C lib/gdextension-lite generate-bindings
+      - name: Build artifact
+        run: |
+          scons platform=${{ matrix.platform }} arch=${{ matrix.arch }} target=template_release build_library=false ${{ join(matrix.scons-args, ' ') }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform }}-${{ matrix.arch }}
+          path: |
+            addons/objc-gdextension/build/libobjcgdextension.*
+
+  build_windows:
+    name: ${{ matrix.platform }} (${{ matrix.arch }})
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [x86_64, x86_32, arm64]
+        platform: [windows]
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          submodules: true
+      - name: Setup godot-cpp
+        uses: ./lib/godot-cpp/.github/actions/setup-godot-cpp
+        with:
+          platform: ${{ matrix.platform }}
+          windows-compiler: msvc
       - name: Generate bindings
         run: |
           make -C lib/gdextension-lite generate-bindings
